# fastapi-version-api

./: .env  main.py  practise.db  pyproject.toml
api/: crud_base.py
api/category/: endpoint.py  schemas.py  services.py
api/product/: __init__.py  routing.py  schemas.py  service.py
api/product/v1/: endpoint.py
core/: config.py
database/: async_session.py  base.py
migrations/: env.py
migrations/versions/: 2024_08_05_1658-ae9d8de9ec9f_test.py  2024_08_06_1322-8e7cee875e0a_test.py
models/: category.py  mixin.py
utils/: handle_except.py
